--- a/templates/add_target.html
+++ b/templates/add_target.html
@@ -1,6 +1,9 @@
+{% extends 'base.html' %}
+
+
 {% block content %}
 <div class="modal-body">
-  <form method="post">
+  <form id="add-target-form" method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <div class="modal-footer">
@@ -9,4 +12,6 @@
     </div>
   </form>
 </div>
+
 {% endblock %}
+
