--- a/templates/home.html
+++ b/templates/home.html
@@ -46,36 +46,65 @@
               </button>
             </div>
             <div class="modal-body">
-              <iframe src="{% url 'add_target' %}" style="width: 100%; height: 400px; border: none;"></iframe>
+              <iframe src="{% url 'add_target' %}" name="my_iframe" style="width: 100%; height: 400px; border: none;"></iframe>
             </div>
           </div>
         </div>
       </div>
 
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title">Editar alvo</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Fechar">
-              <span aria-hidden="true">&times;</span>
-            </button>
+      <div class="modal fade" id="update-target-modal" role="document" tabindex="-1" role="dialog" aria-labelledby="add-target-modal-label" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">Editar alvo</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Fechar">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <form method="post">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <button type="submit" class="btn btn-primary">Salvar</button>
+              </form>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+            </div>
           </div>
-          <div class="modal-body">
-            <form method="post">
-              {% csrf_token %}
-              {{ form.as_p }}
-              <button type="submit" class="btn btn-primary">Salvar</button>
-            </form>
           </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
-          </div>
-        </div>
       </div>
 
       
-<script>
-
-</script>
+      <script>
+        function closeModal() {
+          console.log('chamou')
+            $('#add-target-modal').modal('hide');
+        }
+        
+        $(document).ready(function () {
+              $('form').on('submit', function (event) {
+                  event.preventDefault();
+      
+                  $.ajax({
+                      type: 'post',
+                      url: '{% url "add_target" %}',
+                      data: $('form').serialize(),
+                      success: function (data) {
+                          // Update modal content with the response
+                          $('#add-target-modal .modal-body').html('<p>Form submitted successfully!</p>');
+      
+                          // Close the modal after a short delay
+                          setTimeout(function () {
+                              closeModal();
+                          }, 1000);
+                      },
+                      error: function (xhr, status, error) {
+                          // Handle errors here
+                      }
+                  });
+              });
+          });
+      </script>
 {% endblock %}
 
